// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile should render when the Tile is clicked 1`] = `
<div
  className="MuiPaper-root MuiCard-root makeStyles-root-3 css-t7wcmd-Tile MuiPaper-elevation1 MuiPaper-rounded"
  onClick={[Function]}
>
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root"
    focusable="false"
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": "100%",
        "color": "#69f0ae",
        "position": "absolute",
        "right": "-5px",
        "top": "-5px",
        "zIndex": 1,
      }
    }
    viewBox="0 0 24 24"
  >
    <path
      d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
    />
  </svg>
  <button
    className="MuiButtonBase-root MuiCardActionArea-root"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <div
      className="MuiCardMedia-root makeStyles-root-4 css-1pua7af-Tile"
      style={
        Object {
          "backgroundImage": "url(\\"/images/elf.jpg\\")",
        }
      }
      title="elf"
    />
    <div
      className="MuiCardContent-root css-vgvxt6-Tile"
    >
      <h2
        className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom MuiTypography-alignCenter"
      >
        Elf
      </h2>
      <p
        className="MuiTypography-root css-10fadqj-Tile MuiTypography-body2 MuiTypography-colorTextSecondary"
      >
        Elves are a tall, slender, long-lived people with a strong tradition of art and magic.
      </p>
      <hr
        className="MuiDivider-root"
      />
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorSecondary"
      >
        Bonus
         :
         
        <strong
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorSecondary"
        >
          Dexterity
           
        </strong>
        <strong
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorSecondary"
        >
          Intelligence
           
        </strong>
        <strong
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorSecondary"
        >
          Free
           
        </strong>
      </p>
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorError"
      >
        Malus
         :
         
        <strong
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorError"
        >
          Constitution
           
        </strong>
      </p>
    </div>
    <span
      className="MuiCardActionArea-focusHighlight"
    />
    <span
      className="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`Tile should render with default props 1`] = `
<div
  className="MuiPaper-root MuiCard-root makeStyles-root-1 css-t7wcmd-Tile MuiPaper-outlined MuiPaper-rounded"
  onClick={[Function]}
>
  <button
    className="MuiButtonBase-root MuiCardActionArea-root"
    disabled={false}
    onBlur={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    type="button"
  >
    <div
      className="MuiCardMedia-root makeStyles-root-2 css-1pua7af-Tile"
      style={
        Object {
          "backgroundImage": "url(\\"/images/elf.jpg\\")",
        }
      }
      title="elf"
    />
    <div
      className="MuiCardContent-root css-vgvxt6-Tile"
    >
      <h2
        className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom MuiTypography-alignCenter"
      >
        Elf
      </h2>
      <p
        className="MuiTypography-root css-10fadqj-Tile MuiTypography-body2 MuiTypography-colorTextSecondary"
      >
        Elves are a tall, slender, long-lived people with a strong tradition of art and magic.
      </p>
      <hr
        className="MuiDivider-root"
      />
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorSecondary"
      >
        Bonus
         :
         
        <strong
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorSecondary"
        >
          Dexterity
           
        </strong>
        <strong
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorSecondary"
        >
          Intelligence
           
        </strong>
        <strong
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorSecondary"
        >
          Free
           
        </strong>
      </p>
      <p
        className="MuiTypography-root MuiTypography-body1 MuiTypography-colorError"
      >
        Malus
         :
         
        <strong
          className="MuiTypography-root MuiTypography-body1 MuiTypography-colorError"
        >
          Constitution
           
        </strong>
      </p>
    </div>
    <span
      className="MuiCardActionArea-focusHighlight"
    />
  </button>
</div>
`;
